--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -12520,7 +12520,7 @@ td.visible-print {
  *  A mobile and touch friendly input spinner component for Bootstrap 3.
  *  http://www.virtuosoft.eu/code/bootstrap-touchspin/
  *
- *  Made by István Ujj-Mészáros
+ *  Made by IstvÃ¡n Ujj-MÃ©szÃ¡ros
  *  Under Apache License v2.0 License
  */
 .bootstrap-touchspin .input-group-btn-vertical {
@@ -16213,11 +16213,15 @@ body.sidebar-float .content-wrapper {
 .sales-chart,
 .demo-flot-chart {
   width: 100%;
-  height: 350px;
+  height: 450px;
 }
 
+.demo-flot-donut-chart {
+  width: 100%;
+  height: 225px;
+}
 #visit-chart {
-  height: 300px;
+  height: 325px;
 }
 
 #investment-donut-chart {
