--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -20933,7 +20933,7 @@ ul.nav-categories > li > a {
   border: 1px solid #ddd;
   padding: 25px;
   text-align: left;
-  background-color: #f1f1f1;
+  background-color: #fff;
 }
 .page-auth .center-block .title {
   font-size: 1.2em;
