Added css for mobile page

--- a/WebContent/assets/css/my-custom-styles.css
+++ b/WebContent/assets/css/my-custom-styles.css
@@ -54,3 +54,7 @@
 .top-bar .logged-user .open .btn {
   color: #7b7b7b;
 }
+.mobile{
+	background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    color: white;
+}
